# chronocodex

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  search.js
chronocodex/: CONTRIBUTING.md  LICENSE  requirements.txt
chronocodex/cli/: chronocodex_cli.py
chronocodex/core/: diff_parser.py  embedder.py  orchestration.py  pipeline.py  runner.py  storage.py  summarizer.py  timeline.py
chronocodex/docs/api/: index.html
chronocodex/docs/api/chronocodex/: core.html
chronocodex/docs/api/chronocodex/core/: pipeline.html  summarizer.html
chronocodex/ui/: app.py
data/: chronocodex.db
data/examples/sample_repo/: core.py  hello.py
docs/: index.html
docs/api/chronocodex/core/: diff_parser.html  embedder.html  storage.html  timeline.html
tests/: test_diff_parser.py
